<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="300dp"
    android:layout_width="350dp"
    android:id="@+id/resultados"
    android:layout_centerVertical="true"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="7dp"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    card_view:cardUseCompatPadding="true"
    style="@style/car_style">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_card"
            android:text="@string/card_title_resultado"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/title_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cantidadIntentos"
            android:text="@string/card_intentos"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/rojo"
            android:layout_marginTop="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/felicidades"
            android:text="@string/card_intento_correcto"
            android:textSize="18sp"
            android:layout_below="@+id/title_card"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fallastes"
            android:text="@string/card_fallo"
            android:textSize="18sp"
            android:layout_below="@+id/felicidades"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/respuestas_correctas"
            android:text="@string/card_respuestas"
            android:layout_below="@+id/fallastes"
            android:textSize="15sp"
            android:layout_marginTop="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lasRespuestas"
            android:text="@string/app_title"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/respuestas_correctas"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/card_btn"
            android:id="@+id/card_btn_volver"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>