<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/contenedorPreguntas">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preguntauno"
                    style="@style/estilo_preguntas"
                    android:id="@+id/pregunta1"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta1Sub"
                    android:layout_below="@+id/pregunta1"
                    style="@style/estilo_preguntas_sub"
                    android:id="@+id/textView" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:id="@+id/grupo1">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pregunta_opcion1"
                        android:id="@+id/opcion1Pregunta1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pregunta_opcion2"
                        android:id="@+id/opcion2Pregunta1"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pregunta_opcion3"
                        android:id="@+id/opcion3Pregunta1"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pregunta_opcion4"
                        android:id="@+id/opcion4Preguna1"/>

                </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preguntados"
                style="@style/estilo_preguntas"
                android:id="@+id/pregunta2"
                android:layout_below="@+id/grupo1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta1Sub"
                android:layout_below="@+id/pregunta2"
                style="@style/estilo_preguntas_sub"
                android:id="@+id/textview2"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview2"
                android:id="@+id/grupo2">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion1"
                    android:id="@+id/opcion1Pregunta2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion2"
                    android:id="@+id/opcion2Pregunta2"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion3"
                    android:id="@+id/opcion3Pregunta2"
                     />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion4"
                    android:id="@+id/opcion4Pregunta2"/>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preguntatres"
                style="@style/estilo_preguntas"
                android:id="@+id/pregunta3"
                android:layout_below="@+id/grupo2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta1Sub"
                android:layout_below="@+id/pregunta3"
                style="@style/estilo_preguntas_sub"
                android:id="@+id/txtsub1"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtsub1"
                android:id="@+id/grupo3">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion1"
                    android:id="@+id/opcion1Pregunta3"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion2"
                    android:id="@+id/opcion2Pregunta3"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion3"
                    android:id="@+id/opcion3Pregunta3"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion4"
                    android:id="@+id/opcion4Pregunta3"/>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preguntacuatro"
                style="@style/estilo_preguntas"
                android:id="@+id/pregunta4"
                android:layout_below="@+id/grupo3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta1Sub"
                style="@style/estilo_preguntas_sub"
                android:layout_below="@+id/pregunta4"
                android:id="@+id/txtsub2"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtsub2"
                android:id="@+id/grupo4">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion1"
                    android:id="@+id/opcion1Pregunta4"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion2"
                    android:id="@+id/opcion2Pregunta4"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion3"
                    android:id="@+id/opcion3Pregunta4"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_opcion4"
                    android:id="@+id/opcion4Pregunta4"/>

            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/grupo4"
                android:id="@+id/pregunta5"
                android:text="@string/preguntacinco"
                style="@style/estilo_preguntas"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pregunta5"
                android:id="@+id/pregunta5sub"
                android:text="@string/pregunta1Sub"
                style="@style/estilo_preguntas_sub"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pregunta5sub"
                android:id="@+id/grupo5">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gato"
                    android:id="@+id/opcion1Pregunta5"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alacran"
                    android:id="@+id/opcion2Pregunta5"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pajarito"
                    android:id="@+id/opcion3Pregunta5"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leon"
                    android:id="@+id/opcion4Pregunta5"/>

            </RadioGroup>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>