<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/app_bar"
        android:id="@+id/appbarMenu" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_shadow"
        android:background="@drawable/toolbar_dropshadow" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:drawableLeft="@mipmap/ic_leer"
        android:gravity="left|center_vertical"
        android:text="@string/leerCuento"
        android:drawablePadding="5dp"
        android:id="@+id/btnLeer"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:drawableLeft="@mipmap/ic_ejercicios"
        android:gravity="left|center_vertical"
        android:text="@string/realizar"
        android:drawablePadding="5dp"
        android:id="@+id/btnEjercicios"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:drawableLeft="@mipmap/ic_creditos"
        android:gravity="left|center_vertical"
        android:text="@string/creditos"
        android:drawablePadding="5dp"
        android:id="@+id/btnCreditos"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/dario_3"
        android:scaleType="fitXY"/>
</LinearLayout>