<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/app_bar"
        android:id="@+id/appbarCreditos"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_shadow"
        android:background="@drawable/toolbar_dropshadow" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:src="@mipmap/logouca"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/titleCreditos"
            android:textColor="@color/preguntasColor"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/txtcreditos"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:src="@mipmap/mined"
            android:layout_gravity="right"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/objetivo"
        android:gravity="left"
        android:layout_marginTop="20dp"
        android:textColor="@color/preguntasColor"
        android:id="@+id/txtobjetivo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autores"
        android:id="@+id/txtautores"
        android:textColor="@color/preguntasColor"
        android:layout_marginTop="20dp"/>
</LinearLayout>